feat: link email
